--- a/src/credit/templates/controlPanel.tpl.html
+++ b/src/credit/templates/controlPanel.tpl.html
@@ -169,7 +169,7 @@
     </main>
     <? } else { ?>
     <main role="main" class="container d-flex flex-shrink-0 h-100 align-items-center">
-        <div class="jumbotron mb-0">
+        <div class="jumbotron mb-0 mx-auto">
             <div class="container">
                 <h1>Добро пожаловать в команду!</h1>
                 <p>Здесь будет отображаться информация по Вашим компаниям, запросы от заемщиков, инвестиций и статистика.</p>
