--- a/src/user/templates/userRegisterConfirm.tpl.html
+++ b/src/user/templates/userRegisterConfirm.tpl.html
@@ -77,6 +77,8 @@
     
     </div>
     
-</main>   
+</main>
+
+<? $partViewer->view('parts/pageFooter'); ?>
 
 <? $partViewer->view('parts/footer'); ?>
