--- a/src/credit/templates/userRegisterStart.tpl.html
+++ b/src/credit/templates/userRegisterStart.tpl.html
@@ -3,6 +3,7 @@
 
     $form->
         addWrongLabel('email', 'email указан неверно')->
+        addWrongLabel('accept', 'для регистрации необходимо согласиться с нашей <a href="'.PATH_WEB_BASE.'static/privacy-policy.html" target="_blank" class="alert-link">политикой обработки персональных данных</a>')->
         addWrongLabel('response', 'защита от автоматических регистраций не пройдена')->
         addMissingLabel('email', 'email не указан');
 ?>
@@ -42,6 +43,15 @@
             <label for="email" class="col-sm-2 col-form-label col-form-label-lg">Email</label>
             <div class="col-sm-10">
                 <input id="email" class="form-control form-control-lg" name="email" value="<?=$form->getDisplayValue('email')?>" type="email">
+            </div>
+        </div>
+
+        <div class="form-group row ">
+            <div class="col-12 col-sm-10 offset-sm-2">
+                <div class="form-group form-check">
+                    <input type="checkbox" class="form-check-input" id="accept" name="accept"<?=$process && $form->getValue('accept')?' checked="checked"':''?> />
+                    <label class="form-check-label" for="accept">принимаю </label> <a href="<?=PATH_WEB_BASE?>static/privacy-policy.html" target="_blank">политику обработки персональных данных</a>
+                </div>
             </div>
         </div>
         
