--- a/src/invest/templates/controlPanel.tpl.html
+++ b/src/invest/templates/controlPanel.tpl.html
@@ -27,7 +27,52 @@
             <li>запросы денег (с перепиской)</li>
             <li>рейтинг как инвестора и отзывы</li>
             <li>история запросов и история сделок с фактической доходностью</li>
-        </ul>
+        </ul>  
+    
+        <div class="row flex-row mb-4">
+            <div class="col"><h1 class="">Запросы на инвестирование</h1></div>
+        </div>
+        
+        <? if ($listIncomeRequests) { ?>
+            <div class="row flex-row mb-2">
+                <div class="col-12"><h3>Входящие запросы</h3></div>
+
+                <div class="table-responsive col-12">
+                    <table class="table table-hover table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col" class="align-middle">Дата</th>
+                            <th scope="col" class="align-middle text-center">Информация кредиторе, залоге и сумме инвестийций</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    <? foreach($listIncomeRequests as $item) { ?>
+                    <tr>
+                        <td class="align-middle text-nowrap">
+                            <a href="<?=CommonUtils::makeUrl('creditRequestEditor', array('action' => creditRequestEditor::ACTION_VIEW, 'id' => $item->getId(), 'return' => $curl))?>" title="просмот запроса"><?=ViewTextUtils::humanizeDate($item->getCreatedTime())?></a>
+                        </td>
+                        <td class="align-middle">
+                            <a href="<?=CommonUtils::makeUrl('creditRequestEditor', array('action' => creditRequestEditor::ACTION_VIEW, 'id' => $item->getId(), 'return' => $curl))?>" title="просмот запроса"><?=htmlspecialchars($item->getCreditor()->getType()->getShortName())?> / <?=htmlspecialchars($item->getRequest()->getCategory()->getName())?> / <?=number_format($item->getInvestSumm(), 0, '.', '&nbsp;').'&#8381;'?> на <?=$item->getInvestPeriod()?> мес.</a>
+                        </td>
+                    </tr>
+                    <? } ?>
+                    </tbody>
+                    </table>
+                </div>
+            </div>
+        <? } ?>
+        
+        <div class="row flex-row mb-4">
+            <div class="col">
+                <h5 class="text-center">
+                    <a href="<?=CommonUtils::makeUrl('creditRequestList')?>">список&nbsp;всех&nbsp;запросов</a>
+                    <? if ($inWorkCount) { ?>
+                        (<a href="<?=CommonUtils::makeUrl('creditRequestList', array('status' => array(CreditRequestCreditorStatus::TYPE_CONCIDERED)))?>">запросов в работе: <?=$inWorkCount?></a>)
+                    <? } ?>
+                </h5>
+            </div>
+        </div>
+        
         <hr />    
         <div class="row flex-row mb-4">
             <div class="col-12 col-sm-9 col-md-10"><h1 class="">Мои предложения</h1></div>    
