--- a/src/user/templates/controlPanel.tpl.html
+++ b/src/user/templates/controlPanel.tpl.html
@@ -1,18 +1,9 @@
 <? $partViewer->view('parts/header'); ?>
 
     <? if ($hasCredit) { ?>
-    <main role="main" class="container flex-shrink-0">
-        <p>Информация для тех, у кого есть или были кредиты или запросы на кредиты</p>
-        <ul>
-            <li>текущие сделки (активные) с датами и суммами предстоящих платежей</li>
-            <li>предложения от кредиторов (с перепиской)</li>
-            <li>рейтинг как заемщика и отзывы</li>
-            <li>история запросов и история сделок</li>
-        </ul>
-        
-        <hr />    
+    <main role="main" class="container flex-shrink-0">  
     
-        <div class="row flex-row mb-4" id="requestList">
+        <div class="row flex-row my-4" id="requestList">
             <div class="col-12 col-sm-9 col-md-10">
                 <h1 class="d-inline mr-5 mb-2">Мои заявки</h1>
                 <h5 class="d-inline mb-2">
