--- a/src/user/templates/userRegisterRecovery.tpl.html
+++ b/src/user/templates/userRegisterRecovery.tpl.html
@@ -80,6 +80,8 @@ grecaptcha.ready(function() {
         document.getElementById('google-response').value = token;
     });
 });
-</script>    
+</script>
+
+<? $partViewer->view('parts/pageFooter'); ?>
 
 <? $partViewer->view('parts/footer'); ?>
