Скорректировал текс на главно для одобрения в Яндексе

--- a/src/user/templates/main.tpl.html
+++ b/src/user/templates/main.tpl.html
@@ -5,7 +5,7 @@
 <div class="jumbotron">
     <div class="container">
         <h1>Заемщикам</h1>
-        <h4>Быстрые займы под залог с минимальным пакетом документов</h4>
+        <h4>Поможем быстро получить займ под залог с минимальным пакетом документов</h4>
         <p>Вашу заявку получат сразу несколько кредитных организаций, а Вы в самый короткий срок выберете самое выгодное предложение</p>
         <p class="text-center mb-0 d-lg-none"><a class="btn btn-info btn-lg mt-4" href="<?=CommonUtils::makeUrl('creditRequestEditor', array('action' => creditRequestEditor::ACTION_START, 'return' => $curl))?>" role="button">подать заявку</a></p>
     </div>
