Добавил новые реквизиты

--- a/src/user/templates/parts/pageFooter.tpl.html
+++ b/src/user/templates/parts/pageFooter.tpl.html
@@ -9,7 +9,7 @@
         </div>
         <div class="row mt-2">
             <div class="col small text-muted">
-                Услуги по содействую в получении финансовых услуг предоставляет ИП Дерябин Сергей Валерьевич <span class="text-nowrap">ИНН 500905933938</span> <span class="text-nowrap">ОГРНИП 315500900003479</span> / 142000 Россия, Московская область, г. Домодедово, ул. Советская, 13 - 68 / <span class="text-nowrap">р/с 40802810402290000245</span> в <span class="text-nowrap">АО "АЛЬФА-БАНК"</span> <span class="text-nowrap">БИК 044525593</span> <span class="text-nowrap">к/с 30101810200000000593</span>
+                Услуги по содействую в получении финансовых услуг предоставляет ООО «МИКРОКРЕДИТНАЯ КОМПАНИЯ ФИНАНСОВЫЙ ИНСТРУМЕНТ» <span class="text-nowrap">ИНН 7702460837</span> <span class="text-nowrap">ОГРН 1197746003113</span> / 105318, Москва г, Щербаковская ул, дом 3, этаж 11, комната 2а / <span class="text-nowrap">р/с 40701810600000000646</span> в <span class="text-nowrap">АО «РАЙФФАЙЗЕНБАНК» г. Москва</span> <span class="text-nowrap">БИК 044525700</span>
             </div>
         </div>
     </div>
