--- a/src/user/templates/staticPrivacyPolicy.tpl.html
+++ b/src/user/templates/staticPrivacyPolicy.tpl.html
@@ -13,7 +13,7 @@
 
         <h1>Согласие на обработку персональных данных</h1>
         
-        <p>Я, являясь субъектом персональных данных и получателем финансовой услуги, принимаю решение о предоставлении оператору моих персональных данных и даю ему согласие на их обработку в объеме и порядке, предусмотренном в настоящем согласии. Оператором по обработке моих персональных данных является Индивидуальный Предприниматель Дерябин Сергей Валерьевич (ОГРНИП 315500900003479, 142000 Россия, Московская область, г. Домодедово, ул. Советская, 13 - 68), предоставляющий посреднические услуги в выборе финансовых услуги в рамках осуществления микрофинансовой деятельности и банковской деятельности.</p>
+        <p>Я, являясь субъектом персональных данных и получателем финансовой услуги, принимаю решение о предоставлении оператору моих персональных данных и даю ему согласие на их обработку в объеме и порядке, предусмотренном в настоящем согласии. Оператором по обработке моих персональных данных является ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ «МИКРОКРЕДИТНАЯ КОМПАНИЯ ФИНАНСОВЫЙ ИНСТРУМЕНТ» (ОГРН 1197746003113, 105318, Москва г, Щербаковская ул, дом 3, этаж 11, комната 2а), предоставляющий посреднические услуги в выборе финансовых услуги в рамках осуществления микрофинансовой деятельности и банковской деятельности.</p>
 
         <ul class="my-3">
             <li>
