--- a/src/user/templates/staticContacts.tpl.html
+++ b/src/user/templates/staticContacts.tpl.html
@@ -15,7 +15,7 @@
         
         <p>Мы всегда на связи и готовы помочь в любой возникшей ситуации с 10:00 до 20:00 по Московскому времени (GMT+3).</p>
         
-        <h3 class="my-5">По телефону: <a href="tel:+74959999999">+7 495 999-99-99</a></h3>
+        <h3 class="my-5">По телефону: <a href="tel:+79266777742">+7 (926) 677-77-42</a></h3>
         
         <h3 class="my-5">По почте: <a href="mailto:info@finresurs.online">info@finresurs.online<a></h3>
                     
