--- a/src/base/main.scss
+++ b/src/base/main.scss
@@ -39,6 +39,18 @@ html {
             .toast-header {
                 background-color: $red;
             }
+        }
+        
+        .toast-success {
+            border: 1px solid rgba(40,167,69,.1);
+            box-shadow: 0 0.25rem 0.75rem rgba(40,167,69,.1);
+            
+            .toast-header, button, .close:hover {
+                color: $white;
+            }
+            .toast-header {
+                background-color: $success;
+            }
         }    
     
         #related-images, .preview-row {
