--- a/src/credit/templates/mail/registrationText.tpl.html
+++ b/src/credit/templates/mail/registrationText.tpl.html
@@ -1,6 +1,6 @@
 Рады приветствовать Вас, <?=$user->getName()?>!
 
-Вы успешно зарегистрировались на портале Финансовый Ресурс ( <?=PATH_WEB_CREDITOR?>?utm_source=email&utm_medium=admin&utm_campaign=registration-welcome )
+Вы успешно зарегистрировались на портале Финансовый Ресурс ( <?=CommonUtils::makeUrl('main', array('utm_source' => 'email', 'utm_medium' => 'admin', 'utm_campaign' => 'registration-welcome'))?> )
 
 Ваши учетные данные на сайте:
 
