--- a/src/invest/templates/mail/recoveredText.tpl.html
+++ b/src/invest/templates/mail/recoveredText.tpl.html
@@ -1,6 +1,6 @@
 Рады приветствовать Вас, <?=$user->getName()?>!
 
-Вы успешно зарегистрировались на портале Финансовый Ресурс ( <?=CommonUtils::makeUrl('main', array('utm_source' => 'email', 'utm_medium' => 'admin', 'utm_campaign' => 'registration-welcome'))?> )
+По Вашему запросу мы обновили Ваш пароль портале Финансовый Ресурс ( <?=CommonUtils::makeUrl('main', array('utm_source' => 'email', 'utm_medium' => 'admin', 'utm_campaign' => 'password-recovered'))?> )
 
 Ваши учетные данные на сайте:
 
