--- a/src/invest/templates/userRegisterConfirm.tpl.html
+++ b/src/invest/templates/userRegisterConfirm.tpl.html
@@ -22,12 +22,15 @@
 
         <form action="" method="POST" class="">
             <input id="uuid" type="hidden" name="uuid" value="<?=$form->getValue('uuid')?>" />
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label col-form-label-lg">Email</label>
-                <label class="col-sm-10 col-form-label col-form-label-lg font-weight-bold">
-                    <?=mb_substr($userExists->getEmail(), 0, 2).mb_substr(preg_replace("/([^@])/isu", "*", $userExists->getEmail()), 2, mb_strlen($userExists->getEmail())-4).mb_substr($userExists->getEmail(), mb_strlen($userExists->getEmail())-2, 2)?>
-                </label>
-            </div>
+            
+            <? if ($userExists->getEmail()) { ?>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label col-form-label-lg">Email</label>
+                    <label class="col-sm-10 col-form-label col-form-label-lg font-weight-bold">
+                        <?=mb_substr($userExists->getEmail(), 0, 2).mb_substr(preg_replace("/([^@])/isu", "*", $userExists->getEmail()), 2, mb_strlen($userExists->getEmail())-4).mb_substr($userExists->getEmail(), mb_strlen($userExists->getEmail())-2, 2)?>
+                    </label>
+                </div>
+            <? } ?>
 
             <div class="form-group row">
                 <label for="phone" class="col-12 col-sm-2 col-form-label col-form-label-lg">Телефон</label>
