--- a/src/user/templates/creditRequestEditorView.tpl.html
+++ b/src/user/templates/creditRequestEditorView.tpl.html
@@ -20,7 +20,8 @@
     </nav>
     
     <form action="" method="POST" class="">
-        <input type="hidden" name="securityCode" value="<?=$process?$form->getValue('securityCode'):$securityCode?>" />     
+        <input type="hidden" name="id" value="<?=$form->getValue('id')->getId()?>" id="object-id" />
+        <input type="hidden" name="securityCode" value="<?=$process?$form->getValue('securityCode'):$securityCode?>" id="security-code" />     
 
         <div class="form-group row align-items-center">
             <label class="col-12 col-sm-2 col-form-label col-form-label-lg">Заёмщик</label>
@@ -70,18 +71,49 @@
                 <? } ?>
             </label>
         </div>
+
+        <?
+            /** Загружать изображения можно только в рабочем статусе заявки, а отображать - если они есть **/
+            if (
+                (
+                    !$form->getValue('id')->isDeleted() &&
+                    in_array($form->getValue('id')->getStatus()->getId(), array(CreditRequestStatus::TYPE_INCOME, CreditRequestStatus::TYPE_CONCIDERED))
+                ) || $form->getValue('id')->getImages()->getCount()
+            ) {
+        ?>
+            <hr class="mt-5" />
+            <h3 class="mb-5">Прикрепленные изображения</h3>
+            
+            <?
+                /** Загружать изображения можно только в рабочем статусе заявки, а отображать - если они есть **/
+                if (
+                    !$form->getValue('id')->isDeleted() &&
+                    in_array($form->getValue('id')->getStatus()->getId(), array(CreditRequestStatus::TYPE_INCOME, CreditRequestStatus::TYPE_CONCIDERED))
+                ) {
+            ?>
+                <div class="form-group row align-items-center mb-5">
+                    <label for="photo-upload" class="col-12 col-sm-2 col-form-label col-form-label-lg">Загрузить</label>
+                    <div class="col-12 col-sm-10 form-inline justify-content-between">
+                        <div class="custom-file">
+                            <input class="custom-file-input" type="file" name="file" id="photo-upload" multiple>
+                            <label class="custom-file-label form-control-lg" for="photo-upload">Choose file</label>
+                            <small class="form-text text-muted">Можно загрузить любые изображения, Вашего объекта залога или документов</small>
+                        </div>
+                    </div>
+                </div>
+            <? } ?>
         
+            <? if ($form->getValue('id')->getImages()->getCount()) { ?>
         
-        <? if ($form->getValue('id')->getImages()->getCount()) { ?>
-            <hr class="my-5" />        
-        
-            <div class="form-group my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
-                <? foreach($form->getValue('id')->getImages()->getList() as $image) { ?>
-                    <a href="<?=$image->getUrl()?>" itemprop="contentUrl" data-size="<?=$image->getWidth()?>x<?=$image->getHeight()?>" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                        <img src="<?=$image->getUrl(true)?>" itemprop="thumbnail" class="img-thumbnail mb-2 mr-1" alt="" />
-                    </a>
-                <? } ?>
-            </div>
+                <div class="form-group my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
+                    <? foreach($form->getValue('id')->getImages()->getList() as $image) { ?>
+                        <a href="<?=$image->getUrl()?>" itemprop="contentUrl" data-size="<?=$image->getWidth()?>x<?=$image->getHeight()?>" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+                            <img src="<?=$image->getUrl(true)?>" itemprop="thumbnail" class="img-thumbnail mb-2 mr-1" alt="" />
+                        </a>
+                    <? } ?>
+                </div>
+            
+            <? } ?>
         <? } ?>
         
         <? 
