--- a/src/user/templates/creditRequestEditorView.tpl.html
+++ b/src/user/templates/creditRequestEditorView.tpl.html
@@ -125,7 +125,7 @@
                 )
             ) { 
         ?>
-            <hr class="my-5" />
+            <hr class="my-5" id="offers" />
 
             <h4 class="mb-5">Предложения займа</h4>
 
